--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,16 +1,21 @@
-{{#each articles}}
-    <h2>{{this.headline}}</h2>
-    <a href="{{this.link}}">{{this.link}}</a>
-    <p>{{this.summary}}</p>
-    <form action="/save-article" method="post">
-        <input type="hidden" name="headline" value="{{this.headline}}">
-        <input type="hidden" name="link" value="{{this.link}}">
-        <input type="hidden" name="summary" value="{{this.summary}}">
-        <input type="submit" value="Save Article">
-    </form>
 
-{{/each}}
+<main id="new">
 
+    {{#each articles}}
+    <article>
+        <h2>{{this.headline}}</h2>
+        <a href="{{this.link}}">{{this.link}}</a>
+        <p>{{this.summary}}</p>
+        <form action="/save-article" method="post">
+            <input type="hidden" name="headline" value="{{this.headline}}">
+            <input type="hidden" name="link" value="{{this.link}}">
+            <input type="hidden" name="summary" value="{{this.summary}}">
+            <input type="submit" value="Save Article">
+        </form>
+    </article>
+
+    {{/each}}
+</main>
 <script>
     document.addEventListener("DOMContentLoaded", init);
     function init(){
@@ -18,6 +23,7 @@
             button.addEventListener("click", function(){
                 this.value="Saved";
                 this.setAttribute("disabled", true);
+                this.style.backgroundColor="slategrey";
                 this.parentElement.submit();
             });
         });
