--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="./public/style.css">
 
-<h1> Web-Scraper</h1>
-    <h2> New York Times Edition</h2>
+<main id="home">
+
+</main>
