--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,8 @@
 <body>
     
     <header>
+        <h1> Web-Scraper</h1>
+        <h2> New York Times Edition</h2>
 
         <form action="/" method="get" >
             <input type="submit" value="Home" class="button">
@@ -23,8 +25,10 @@
         </form>
 
     </header>
-    <main>
+    
+
         {{{body}}}
-    </main>
+    
+    <footer>&copy; 2018 Nathan Worford</footer>
 </body>
 </html>
